[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "odc-client"
authors = [{ name = "Sjors Smits", email = "smits.sjors@gmail.com" }]
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["typer[all] >=0.7", "fabric >=3.0"]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/smitssjors/odc-client"

[project.scripts]
odc-client = "odc_client:main"

[tool.flit.module]
name = "odc_client"
